Move timeout to config

--- a/LyricsAverage/appsettings.json
+++ b/LyricsAverage/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "LyricsTimeoutSeconds" : "30"
+  "LyricsAverage": 
+  {
+  "RequestTimeoutSeconds": "30"
+  }
 }
